PROJECT(fusestorage)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=30")
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(FUSE REQUIRED)

include_directories(${FUSE_INCLUDE_DIR})
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(fusestorage ${DIR_SRCS})
target_link_libraries(fusestorage ${FUSE_LIBRARIES})