PROJECT(fusestorage)
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=30")

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})

set(_OPENSSL_VERSION "")
find_package(Boost REQUIRED COMPONENTS log log_setup random system thread locale regex filesystem chrono date_time)
find_package(OpenSSL 1.0.0 REQUIRED)
find_package(Casablanca REQUIRED)

find_package(FUSE REQUIRED)
find_package(AZURE_STORAGE REQUIRED)


include_directories(${FUSE_INCLUDE_DIR}, ${CASABLANCA_INCLUDE_DIR}, ${Boost_INCLUDE_DIRS}, ${OPENSSL_INCLUDE_DIRS}, ${AZURE_STORAGE_INCLUDE_DIR})
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(fusestorage ${DIR_SRCS})
target_link_libraries(fusestorage ${FUSE_LIBRARIES} ${CASABLANCA_LIBRARIES} ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES} ${AZURE_STORAGE_LIBRARIES})